input query processing

--- a/interface/interface1.ipynb
+++ b/interface/interface1.ipynb
@@ -234,7 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_input(query, normalization):\n",
+    "    # appliquer le traitement sur la requete\n",
+    "    if normalization == \"Porter\":\n",
+    "        query = PORTER_STEMMER.stem(query) \n",
+    "    elif normalization == \"Lancaster\":\n",
+    "        query = LANCASTER_STEMMER.stem(query) \n",
+    "    return query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +270,7 @@
     "        return result , nb_terms\n",
     "        \n",
     "    else :\n",
+    "        query = process_input(query, normalization)\n",
     "        i=0\n",
     "        for doc_name in os.listdir('Collections'):\n",
     "            doc_path = os.path.join('Collections', doc_name)\n",
