tp 4 (tp3 a verifier )

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -63,7 +63,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\ryan\\anaconda3\\envs\\ML\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\ryan\\AppData\\Local\\Temp\\ipykernel_8108\\2440574508.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\ryan\\AppData\\Local\\Temp\\ipykernel_10408\\2440574508.py\", line 1, in <module>\n",
       "    import nltk\n",
       "  File \"c:\\Users\\ryan\\anaconda3\\envs\\ML\\lib\\site-packages\\nltk\\__init__.py\", line 133, in <module>\n",
       "    from nltk.collocations import *\n",
@@ -155,7 +155,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\ryan\\anaconda3\\envs\\ML\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\ryan\\AppData\\Local\\Temp\\ipykernel_8108\\2440574508.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\ryan\\AppData\\Local\\Temp\\ipykernel_10408\\2440574508.py\", line 1, in <module>\n",
       "    import nltk\n",
       "  File \"c:\\Users\\ryan\\anaconda3\\envs\\ML\\lib\\site-packages\\nltk\\__init__.py\", line 133, in <module>\n",
       "    from nltk.collocations import *\n",
@@ -247,7 +247,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"c:\\Users\\ryan\\anaconda3\\envs\\ML\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\ryan\\AppData\\Local\\Temp\\ipykernel_8108\\2440574508.py\", line 1, in <module>\n",
+      "  File \"C:\\Users\\ryan\\AppData\\Local\\Temp\\ipykernel_10408\\2440574508.py\", line 1, in <module>\n",
       "    import nltk\n",
       "  File \"c:\\Users\\ryan\\anaconda3\\envs\\ML\\lib\\site-packages\\nltk\\__init__.py\", line 146, in <module>\n",
       "    from nltk.chunk import *\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,40 +553,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['D1', 'D2', 'D3', 'D4', 'D5', 'D6']\n",
-      "Occurrences: [(1, 'effect', 'D1', 1, 0.0795), (2, 'effect', 'D3', 1, 0.1193), (3, 'effect', 'D6', 1, 0.1193)]\n",
-      "Occurrences: [(1, 'distribution', 'D1', 1, 0.0663), (2, 'distribution', 'D3', 1, 0.0995), (3, 'distribution', 'D4', 1, 0.0332), (4, 'distribution', 'D6', 1, 0.0995)]\n"
+      "Occurrences: [(1, 'effect', 'D1', 2, 0.1326), (2, 'effect', 'D2', 1, 0.0398), (3, 'effect', 'D3', 1, 0.0995), (4, 'effect', 'D6', 3, 0.2985)]\n",
+      "Occurrences: [(1, 'distribut', 'D1', 1, 0.0663), (2, 'distribut', 'D3', 1, 0.0995), (3, 'distribut', 'D4', 1, 0.0332), (4, 'distribut', 'D6', 1, 0.0995)]\n",
+      "Occurrences: [(1, 'wing', 'D1', 3, 0.301), (2, 'wing', 'D6', 2, 0.301)]\n",
+      "Occurrences: [(1, 'slipstream', 'D1', 5, 0.7042)]\n",
+      "Occurrences: [(1, 'experi', 'D1', 1, 0.1408)]\n",
+      "Occurrences: [(1, 'investig', 'D1', 1, 0.1003), (2, 'investig', 'D2', 1, 0.0602)]\n",
+      "Occurrences: [(1, 'aerodynam', 'D1', 1, 0.1003), (2, 'aerodynam', 'D6', 1, 0.1505)]\n"
      ]
     }
    ],
    "source": [
-    "relevance = calculer_relevance('effect distribution','Split', 'None', 'DPT',path)"
+    "relevance = calculer_relevance('effect distribution wing slipstream experiment investig aerodynam','Split', 'Porter', 'DPT',path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'D1': 0.14579999999999999,\n",
-       " 'D2': 0,\n",
-       " 'D3': 0.2188,\n",
-       " 'D4': 0.0332,\n",
-       " 'D5': 0,\n",
-       " 'D6': 0.2188}"
+       "{'D1': 1.5455, 'D2': 0.1, 'D3': 0.199, 'D4': 0.0332, 'D5': 0, 'D6': 0.8495}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,17 +637,21 @@
     "    relevance_dict = {}\n",
     "    for doc_name, doc_vector in doc_vectors.items():\n",
     "     \n",
-    "        # Produit scalaire (query_vector · doc_vector), où chaque poids de query est 1\n",
-    "        dot_product = sum(doc_vector.get(term, 0) for term in query.split())\n",
+    "        # Produit scalaire (query_vector · doc_vector), où chaque poids de query est 1 ( somme (vi *wi))\n",
+    "        \n",
+    "        dot_product = sum(doc_vector.get(term, 0) for term in doc_vector)\n",
     "        \n",
     "        # Norme du vecteur de la requête (sqrt(nombre de termes))\n",
     "        # utilisation de len parceque le vecteur norm est un vecteur boolean\n",
+    "        # sqrt(som wi)\n",
     "        norm_query = math.sqrt(len(doc_vector))\n",
+    "        print(norm_query)\n",
     "        \n",
-    "        \n",
-    "        # Norme du vecteur du document\n",
+    "        # Norme du vecteur du document (somme poidsi++2)\n",
+    "        # for weight in doc_vector.values():\n",
+    "        #     print(weight)\n",
     "        norm_doc = math.sqrt(sum(weight ** 2 for weight in doc_vector.values()))\n",
-    "        \n",
+    "        # print(norm_doc)\n",
     "        # Similarité cosinus (éviter la division par zéro)\n",
     "        if norm_query > 0 and norm_doc > 0:\n",
     "            similarity = dot_product / (norm_query * norm_doc)\n",
@@ -664,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -673,32 +676,37 @@
      "text": [
       "Occurrences pour le terme 'effect': [(1, 'effect', 'D1', 1, 0.0795), (2, 'effect', 'D3', 1, 0.1193), (3, 'effect', 'D6', 1, 0.1193)]\n",
       "Occurrences pour le terme 'distribution': [(1, 'distribution', 'D1', 1, 0.0663), (2, 'distribution', 'D3', 1, 0.0995), (3, 'distribution', 'D4', 1, 0.0332), (4, 'distribution', 'D6', 1, 0.0995)]\n",
-      "Occurrences pour le terme 'solution': [(1, 'solution', 'D4', 3, 0.2113)]\n",
-      "{'D1': {'effect': 0.0795, 'distribution': 0.0663}, 'D2': {}, 'D3': {'effect': 0.1193, 'distribution': 0.0995}, 'D4': {'distribution': 0.0332, 'solution': 0.2113}, 'D5': {}, 'D6': {'effect': 0.1193, 'distribution': 0.0995}}\n"
+      "{'D1': {'effect': 0.0795, 'distribution': 0.0663}, 'D2': {}, 'D3': {'effect': 0.1193, 'distribution': 0.0995}, 'D4': {'distribution': 0.0332}, 'D5': {}, 'D6': {'effect': 0.1193, 'distribution': 0.0995}}\n",
+      "1.4142135623730951\n",
+      "0.0\n",
+      "1.4142135623730951\n",
+      "1.0\n",
+      "0.0\n",
+      "1.4142135623730951\n"
      ]
     }
    ],
    "source": [
-    "relevance_dict= calculer_relevance_cosinus('effect distribution solution','Split', 'None', 'DPT',path)"
+    "relevance_dict= calculer_relevance_cosinus('effect distribution','Split', 'None', 'DPT',path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'D1': 0.8984372214112989,\n",
+       "{'D1': 0.9959267318751248,\n",
        " 'D2': 0,\n",
-       " 'D3': 0.8984393806682086,\n",
-       " 'D4': 0.526242756663849,\n",
+       " 'D3': 0.9959304316119252,\n",
+       " 'D4': 1.0,\n",
        " 'D5': 0,\n",
-       " 'D6': 0.8984393806682086}"
+       " 'D6': 0.9959304316119252}"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +733,9 @@
      "text": [
       "Occurrences: [(1, 'effect', 'D1', 1, 0.0795), (2, 'effect', 'D3', 1, 0.1193), (3, 'effect', 'D6', 1, 0.1193)]\n",
       "Occurrences: [(1, 'distribution', 'D1', 1, 0.0663), (2, 'distribution', 'D3', 1, 0.0995), (3, 'distribution', 'D4', 1, 0.0332), (4, 'distribution', 'D6', 1, 0.0995)]\n",
-      "{'D1': 0.2891077387201518, 'D2': 0.0, 'D3': 0.4609178884439677, 'D4': 0.05460709855914006, 'D5': 0.0, 'D6': 0.4609178884439677}\n"
+      " doc vectors : {'D1': {'effect': 0.0795, 'distribution': 0.0663}, 'D2': {}, 'D3': {'effect': 0.1193, 'distribution': 0.0995}, 'D4': {'distribution': 0.0332}, 'D5': {}, 'D6': {'effect': 0.1193, 'distribution': 0.0995}}\n",
+      "vecteur query {'effect': 0.3181, 'distribution': 0.2985}\n",
+      "{'D1': 0.11398376765566398, 'D2': 0, 'D3': 0.17941098224334792, 'D4': 0.0343009847771403, 'D5': 0, 'D6': 0.17941098224334792}\n"
      ]
     }
    ],
@@ -748,12 +758,17 @@
     "            poids_terme = occ[4]\n",
     "            doc_vectors[doc_name][term] = poids_terme\n",
     "            query_vector[term] = query_vector.get(term, 0) + poids_terme\n",
-    "\n",
+    "            \n",
+    "    print(f\" doc vectors : {doc_vectors}\")\n",
+    "    print(f\"vecteur query {query_vector}\")\n",
     "    # Calcul de la mesure de Jaccard pour chaque document\n",
     "    jaccard_similarity = {}\n",
     "    for doc, term_weights in doc_vectors.items():\n",
-    "        intersection = sum(query_vector.get(term, 0) * weight for term, weight in term_weights.items())\n",
-    "        sum_query_squares = sum(weight**2 for weight in query_vector.values())\n",
+    "        # intersection = sum(query_vector.get(term, 0) * weight for term, weight in term_weights.items())\n",
+    "        intersection = sum( weight for term, weight in term_weights.items())\n",
+    "        \n",
+    "        # sum_query_squares = sum(weight**2 for weight in query_vector.values())\n",
+    "        sum_query_squares = math.sqrt(len(term_weights))\n",
     "        sum_doc_squares = sum(weight**2 for weight in term_weights.values())\n",
     "        union = sum_query_squares + sum_doc_squares - intersection\n",
     "\n",
@@ -766,6 +781,31 @@
     "\n",
     "jaccard_relevance = calculer_jaccard_similarity('effect distribution', 'Split', 'None', 'DPT', path)\n",
     "print(jaccard_relevance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D1': 0.11398376765566398,\n",
+       " 'D2': 0,\n",
+       " 'D3': 0.17941098224334792,\n",
+       " 'D4': 0.0343009847771403,\n",
+       " 'D5': 0,\n",
+       " 'D6': 0.17941098224334792}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jaccard_relevance"
    ]
   },
   {
