--- a/interface/methodes.ipynb
+++ b/interface/methodes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,137 +146,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 D5 secondary 2 0.1408\n",
-      "2 D5 flow 5 0.1427\n",
-      "3 D5 fields 1 0.0704\n",
-      "4 D5 embedded 3 0.2113\n",
-      "5 D5 hypersonic 3 0.1505\n",
-      "6 D5 shock 5 0.2509\n",
-      "7 D5 layers 1 0.0704\n",
-      "8 D5 . 12 0.3010\n",
-      "9 D5 ramp 2 0.1408\n",
-      "10 D5 compression 2 0.1408\n",
-      "11 D5 surface 3 0.1505\n",
-      "12 D5 located 1 0.0704\n",
-      "13 D5 locally 1 0.0704\n",
-      "14 D5 supersonic 1 0.0704\n",
-      "15 D5 region 1 0.0502\n",
-      "16 D5 behind 1 0.0704\n",
-      "17 D5 bow 2 0.1408\n",
-      "18 D5 wave, 2 0.1408\n",
-      "19 D5 generates 1 0.0704\n",
-      "20 D5 wave 2 0.1003\n",
-      "21 D5 disturbance 1 0.0704\n",
-      "22 D5 may 1 0.0704\n",
-      "23 D5 viewed 1 0.0704\n",
-      "24 D5 newtonian 7 0.4930\n",
-      "25 D5 impact 1 0.0704\n",
-      "26 D5 layer 2 0.0663\n",
-      "27 D5 thin 1 0.0704\n",
-      "28 D5 examination 1 0.0704\n",
-      "29 D5 applicability 1 0.0704\n",
-      "30 D5 theory 4 0.2007\n",
-      "31 D5 cones 1 0.0704\n",
-      "32 D5 wedges 1 0.0704\n",
-      "33 D5 uniform 1 0.0502\n",
-      "34 D5 streams 1 0.0704\n",
-      "35 D5 suggests 1 0.0704\n",
-      "36 D5 expected 1 0.0704\n",
-      "37 D5 give 1 0.0502\n",
-      "38 D5 useful 1 0.0704\n",
-      "39 D5 approximation 1 0.0704\n",
-      "40 D5 pressures 4 0.2817\n",
-      "41 D5 pressure 6 0.3010\n",
-      "42 D5 equation 1 0.0502\n",
-      "43 D5 based 1 0.0704\n",
-      "44 D5 concept 1 0.0704\n",
-      "45 D5 predicts 1 0.0704\n",
-      "46 D5 number 1 0.0502\n",
-      "47 D5 interesting 1 0.0704\n",
-      "48 D5 things 1 0.0704\n",
-      "49 D5 .. 1 0.0704\n",
-      "50 D5 first, 1 0.0704\n",
-      "51 D5 differ 2 0.1408\n",
-      "52 D5 simple 2 0.1003\n",
-      "53 D5 factors 1 0.0704\n",
-      "54 D5 1.5 1 0.0704\n",
-      "55 D5 3,. 1 0.0704\n",
-      "56 D5 example, 1 0.0704\n",
-      "57 D5 flare 4 0.2817\n",
-      "58 D5 stabilizers 1 0.0704\n",
-      "59 D5 blunt-nosed 2 0.1408\n",
-      "60 D5 bodies 1 0.0502\n",
-      "61 D5 revolution, 1 0.0704\n",
-      "62 D5 lower 1 0.0704\n",
-      "63 D5 diminish 1 0.0704\n",
-      "64 D5 increasing 1 0.0704\n",
-      "65 D5 flight 1 0.0704\n",
-      "66 D5 speed 2 0.1003\n",
-      "67 D5 range 1 0.0704\n",
-      "68 D5 calculated 1 0.0398\n",
-      "69 D5 vary 2 0.1408\n",
-      "70 D5 result 1 0.0704\n",
-      "71 D5 nonuniformity 1 0.0704\n",
-      "72 D5 incident 1 0.0704\n",
-      "73 D5 stream, 1 0.0704\n",
-      "74 D5 depend 1 0.0704\n",
-      "75 D5 axial 1 0.0502\n",
-      "76 D5 location 1 0.0704\n",
-      "77 D5 case 2 0.1408\n",
-      "78 D5 flap 2 0.1408\n",
-      "79 D5 mounted 1 0.0704\n",
-      "80 D5 large-angled 1 0.0704\n",
-      "81 D5 cone, 1 0.0704\n",
-      "82 D5 coefficients 1 0.0704\n",
-      "83 D5 1 1 0.0704\n",
-      "84 D5 5 2 0.1408\n",
-      "85 D5 variable 1 0.0704\n",
-      "86 D5 entropy 1 0.0704\n",
-      "87 D5 coefficient 2 0.1408\n",
-      "88 D5 greater 1 0.0704\n",
-      "89 D5 maximum 1 0.0704\n",
-      "90 D5 possible 1 0.0502\n",
-      "91 D5 occur 1 0.0704\n",
-      "92 D5 process 2 0.1408\n",
-      "93 D5 efficient 1 0.0704\n",
-      "94 D5 single 1 0.0704\n",
-      "95 D5 areas 1 0.0704\n",
-      "96 D5 protrude 1 0.0704\n",
-      "97 D5 main 1 0.0704\n",
-      "98 D5 revert 1 0.0704\n",
-      "99 D5 value 1 0.0704\n",
-      "100 D5 equations 1 0.0502\n",
-      "101 D5 developed 1 0.0502\n",
-      "102 D5 initial 1 0.0704\n",
-      "103 D5 slopes 1 0.0704\n",
-      "104 D5 normal-force 1 0.0704\n",
-      "105 D5 pitching-moment 1 0.0704\n",
-      "106 D5 curves 1 0.0704\n",
-      "107 D5 stabilizer 1 0.0704\n",
-      "108 D5 simplest 1 0.0704\n",
-      "109 D5 conventional 1 0.0704\n",
-      "110 D5 ratio 2 0.1408\n",
-      "111 D5 local 1 0.0704\n",
-      "112 D5 dynamic 2 0.1408\n",
-      "113 D5 free-stream 1 0.0704\n",
-      "114 D5 takes 1 0.0704\n",
-      "115 D5 values 1 0.0704\n",
-      "116 D5 low 1 0.0502\n",
-      "117 D5 0.1 1 0.0704\n",
-      "118 D5 examples 1 0.0704\n",
-      "119 D5 considered 1 0.0398\n"
+      "1 D1 experimental 2 0.2817\n",
+      "2 D1 investigation 1 0.1408\n",
+      "3 D1 aerodynamics 1 0.1408\n",
+      "4 D1 wing 3 0.3010\n",
+      "5 D1 slipstream 5 0.7042\n",
+      "6 D1 . 6 0.3010\n",
+      "7 D1 study 1 0.1003\n",
+      "8 D1 propeller 1 0.1408\n",
+      "9 D1 made 2 0.2007\n",
+      "10 D1 order 1 0.1408\n",
+      "11 D1 determine 1 0.1408\n",
+      "12 D1 spanwise 1 0.1408\n",
+      "13 D1 distribution 1 0.0663\n",
+      "14 D1 lift 3 0.4225\n",
+      "15 D1 increase 1 0.1408\n",
+      "16 D1 due 2 0.2817\n",
+      "17 D1 different 3 0.3010\n",
+      "18 D1 angles 1 0.1408\n",
+      "19 D1 attack 1 0.1408\n",
+      "20 D1 free 1 0.1003\n",
+      "21 D1 stream 1 0.1003\n",
+      "22 D1 velocity 1 0.1003\n",
+      "23 D1 ratios 1 0.1408\n",
+      "24 D1 results 1 0.1003\n",
+      "25 D1 intended 1 0.1408\n",
+      "26 D1 part 2 0.2817\n",
+      "27 D1 evaluation 2 0.2817\n",
+      "28 D1 basis 1 0.1003\n",
+      "29 D1 theoretical 1 0.1408\n",
+      "30 D1 treatments 1 0.1408\n",
+      "31 D1 problem 1 0.0663\n",
+      "32 D1 comparative 1 0.1408\n",
+      "33 D1 span 1 0.1408\n",
+      "34 D1 loading 1 0.1408\n",
+      "35 D1 curves, 1 0.1408\n",
+      "36 D1 together 1 0.1408\n",
+      "37 D1 supporting 1 0.1408\n",
+      "38 D1 evidence, 1 0.1408\n",
+      "39 D1 showed 1 0.1408\n",
+      "40 D1 substantial 1 0.1408\n",
+      "41 D1 increment 1 0.1408\n",
+      "42 D1 produced 1 0.1408\n",
+      "43 D1 /destalling/ 1 0.1408\n",
+      "44 D1 boundary-layer-control 1 0.1408\n",
+      "45 D1 effect 1 0.0795\n",
+      "46 D1 integrated 1 0.1003\n",
+      "47 D1 remaining 1 0.1408\n",
+      "48 D1 increment, 1 0.1408\n",
+      "49 D1 subtracting 1 0.1408\n",
+      "50 D1 destalling 2 0.2817\n",
+      "51 D1 lift, 1 0.1003\n",
+      "52 D1 found 1 0.1408\n",
+      "53 D1 agree 1 0.1408\n",
+      "54 D1 well 1 0.1408\n",
+      "55 D1 potential 1 0.1408\n",
+      "56 D1 flow 1 0.0571\n",
+      "57 D1 theory 1 0.1003\n",
+      "58 D1 empirical 1 0.1408\n",
+      "59 D1 effects 1 0.0795\n",
+      "60 D1 specific 1 0.1408\n",
+      "61 D1 configuration 1 0.1408\n",
+      "62 D1 experiment 1 0.1408\n"
      ]
     }
    ],
    "source": [
-    "get_text_args(\"D5\", False, True)"
+    "get_text_args(\"D1\", False, True)"
    ]
   },
   {
@@ -289,7 +232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TF",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
